manifest/objects/LVGO__Pricing_Structure__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Estimated_At_Risk_PPPM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated At-Risk PPPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Partner_Admin_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Partner Admin Fees</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__PMPM__c</fullName>
        <description>JENGA-1357</description>
        <inlineHelpText>Only used for BH 2.0 product</inlineHelpText>
        <label>PMPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Price_Book_Entry_Variations_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Pricing_Stipulations__c</fullName>
        <label>Pricing Stipulations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Price_Book_Entry_Variations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Up_Front_Per_Member__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Up Front Per Member</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LV Pricing Structure</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Price_Book__c</columns>
        <columns>LVGO__Program__c</columns>
        <columns>LVGO__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Pricing Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>